retrieve_ENO_DEV1/objects/Outbound_Transfer__c.object
<CustomObject>
    <fields>
        <fullName>Activated_In_This_Context__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activated In This Context</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Fields__c</fullName>
        <label>Additional Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Currency_ISO_Code__c</fullName>
        <label>Currency ISO Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Failed_By_Business_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Failed By Business Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IL_Transfer_Data_Name__c</fullName>
        <label>IL Transfer Data Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inserted_Time_In_Ms__c</fullName>
        <label>Inserted Time In Ms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inserted__c</fullName>
        <label>Inserted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Updated_Time_In_Ms__c</fullName>
        <label>Last Updated Time In Ms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Updated__c</fullName>
        <label>Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Request_Body__c</fullName>
        <label>Request Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Endpoint__c</fullName>
        <label>Request Endpoint</label>
        <length>16384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Method__c</fullName>
        <label>Request Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PUT</fullName>
                </value>
                <value>
                    <fullName>POST</fullName>
                </value>
                <value>
                    <fullName>GET</fullName>
                </value>
                <value>
                    <fullName>PATCH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Generic Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retry_Counter__c</fullName>
        <label>Retry Counter</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SObject_Developer_Name__c</fullName>
        <label>SObject Developer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_Timestamp__c</fullName>
        <label>Sent Timestamp</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trace_Id__c</fullName>
        <formula>&quot;CRM&quot; + Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trace-Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfered_Timestamp_In_Ms__c</fullName>
        <label>Transfered Timestamp In Ms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transfered_Timestamp__c</fullName>
        <label>Transfered Timestamp</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transfered</label>
        <type>Checkbox</type>
    </fields>
    <label>Outbound Transfer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Transfered__c</columns>
        <columns>Error_Code__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Failed_By_Business_Error__c</columns>
        <columns>Inserted_Time_In_Ms__c</columns>
        <columns>Request_Body__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>Outbound Transfer</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outbound Transfers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>